# lab_2_with_ui

./: .gitignore  CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
data/: dict.txt  text.txt
dict/: dict.cpp  dict.h  dict_preprocessor.cpp
errors/: errors.cpp  errors.h
radix_tree/: radix_tree.cpp  radix_tree.h
tests/: test.cpp  test.h
text_operations/: BMH_search_alg.cpp  BMH_search_alg.h  BM_search_alg.cpp  BM_search_alg.h  text_formation.cpp  text_formation.h  text_search.cpp  text_search.h
